feat: remove autofocus from local-dev

--- a/public/cp-advanced/local-dev.html
+++ b/public/cp-advanced/local-dev.html
@@ -53,7 +53,7 @@
     <h2>Example Inputs</h2>
 
     <p><i>Try accessing using the <kbd>Ctrl</kbd> + <kbd>Space</kbd> from within them!</i></p>
-    <input autofocus type="text" placeholder="Test Input">
+    <input type="text" placeholder="Test Input">
 
     <h2>Output</h2>
     <pre id="output">try it out...</pre>
